--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
+    "prettier": "^2.7.1",
     "rollup": "^2.54.0",
     "rollup-plugin-banner2": "^1.2.2",
     "rollup-plugin-inject-process-env": "^1.3.1",
